infrastructure/network-policies/allow-prometheus-scraping.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-prometheus-scraping
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "9090"
              protocol: TCP
            - port: "9091"
              protocol: TCP
            - port: "9093"
              protocol: TCP
            - port: "9100"
              protocol: TCP
            - port: "9402"
              protocol: TCP
