infrastructure/network-policies/default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  endpointSelector:
    matchLabels:
      k8s:io.cilium.k8s.namespace.labels.network-policy/default-deny: "true"
  ingress: []
